# project-template

./: .gitignore  Makefile  Pipfile  README.md  Vagrantfile  pyproject.toml  requirements.txt  setup.cfg  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install-tools.sh  post-install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  user-story.md
config/: registries.yaml
service/: __init__.py  config.py  models.py  routes.py
service/common/: error_handlers.py
service/utils/: error_handlers.py
tests/: factories.py  test_cli_commands.py  test_models.py  test_routes.py  test_service.py
